# rlbook

./: .gitignore  CLAUDE.md  LICENSE  README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json  wrangler.toml
.github/workflows/: deploy.yml
code/: README.md  pyproject.toml  requirements.txt
code/rlbook/: __init__.py
code/rlbook/agents/: __init__.py  dqn.py  elevator_dqn.py  grpo.py  q_learning.py
code/rlbook/envs/: __init__.py  bandits.py  elevator.py  gridworld.py
code/rlbook/examples/: __init__.py  train_elevator.py  train_gridworld.py  train_grpo.py
code/rlbook/utils/: __init__.py  plotting.py  replay_buffer.py
code/tests/: __init__.py  test_agents.py  test_elevator.py  test_envs.py  test_grpo.py  test_utils.py
code/trained_models/: elevator_dqn.pt  training_metrics.json
content/: connections.yaml
content/applications/: README.md
content/applications/0010-rlhf-language-models/: index.mdx
content/applications/0020-finetune-llm/: index.mdx
content/chapters/1120-sarsa/: index.mdx  (+4 more)
content/environments/: README.md
content/infrastructure/: README.md
content/papers/: README.md
docs/: ARCHITECTURE.md  CONTENT_TYPES.md  CONTENT_WORKFLOW.md  CONTRIBUTING.md
prompts/: CODE_STANDARDS.md  EDITOR_REVIEW.md  MATH_CONVENTIONS.md  MDX_AUTHORING.md  PRINCIPLES.md  STYLE_GUIDE.md  VISUAL_PATTERNS.md
prompts/templates/: chapter.md  concept.md  exercise.md  interactive.md  paper.md  subsection.md
public/notebooks/: elevator-dispatch.ipynb  finetune-llm-with-rl.ipynb  quantization-exercises.ipynb  quantize-llm.ipynb
scripts/: setup.sh
src/layouts/: BaseLayout.astro  ChapterLayout.astro  SubsectionLayout.astro
src/lib/: blog.ts  chapters.ts  content.ts
src/pages/: index.astro
src/styles/: global.css
(+214 files in other folders)
